@@ -27,6 +27,7 @@
 package org.dita.dost.invoker;
 
 import static org.dita.dost.invoker.Arguments.*;
+import static org.dita.dost.log.DITAOTAntLogger.USE_COLOR;
 import static org.dita.dost.util.Configuration.transtypes;
 import static org.dita.dost.util.Constants.ANT_TEMP_DIR;
 import static org.dita.dost.util.LangUtils.pair;
@@ -37,7 +38,9 @@ import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 import java.io.*;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
@@ -54,7 +57,11 @@ import org.apache.tools.ant.util.ClasspathUtils;
 import org.apache.tools.ant.util.FileUtils;
 import org.apache.tools.ant.util.ProxySetup;
 import org.dita.dost.log.MessageUtils;
+import org.dita.dost.log.StandardLogger;
+import org.dita.dost.platform.PluginInstall;
+import org.dita.dost.platform.PluginUninstall;
 import org.dita.dost.platform.Plugins;
+import org.dita.dost.platform.SemVerMatch;
 import org.dita.dost.project.Project.Context;
 import org.dita.dost.project.Project.Publication;
 import org.dita.dost.project.ProjectFactory;
@@ -128,7 +135,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
 
   private final ArgumentParser argumentParser = new ArgumentParser();
   private Arguments args;
-  static final ResourceBundle locale = ResourceBundle.getBundle("cli", new Locale("en", "US"));
+  public static final ResourceBundle locale = ResourceBundle.getBundle("cli", new Locale("en", "US"));
 
   /**
    * Prints the message of the Throwable if it (the message) is not {@code null}.
@@ -138,19 +145,12 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   private void printMessage(final Throwable t) {
     final String message = t.getMessage();
     if (message != null && !message.trim().isEmpty()) {
-      printErrorMessage(message);
+      printErrorMessage(message, t);
     }
   }
 
-  private void printErrorMessage(final String msg) {
-    if (args != null && args.useColor) {
-      System.err.print(DefaultLogger.ANSI_RED);
-      System.err.print(locale.getString("error_msg").formatted(msg));
-      System.err.println(DefaultLogger.ANSI_RESET);
-    } else {
-      System.err.println(locale.getString("error_msg").formatted(msg));
-    }
-    System.err.println();
+  private void printErrorMessage(final String msg, final Throwable t) {
+    logger.error(msg, t);
   }
 
   /**
@@ -166,6 +166,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    *                                 <code>null</code> in which case the system classloader is
    *                                 used.
    */
+  @Deprecated
   public static void start(
     final String[] args,
     final Properties additionalUserProperties,
@@ -192,7 +193,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       handleLogfile();
       printMessage(exc);
       if (exc.info != null) {
-        System.out.println(exc.info);
+        logger.info(exc.info);
       }
       exit(1);
       return;
@@ -249,7 +250,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       }
       if (this.args.repeat > 1) {
         for (int i = 0; i < durations.length; i++) {
-          System.out.println(locale.getString("conversion.repeatDuration").formatted(i + 1, durations[i]));
+          logger.info(locale.getString("conversion.repeatDuration").formatted(i + 1, durations[i]));
         }
       }
     } catch (final BuildException be) {
@@ -295,14 +296,19 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    *
    * @param args Command line arguments. Must not be <code>null</code>.
    */
+  @Deprecated
   public static void main(final String[] args) {
     start(args, null, null);
   }
 
+  final StandardLogger logger;
+
   /**
    * Constructor used when creating Main for later arg processing and startup
    */
-  public Main() {}
+  public Main() {
+    logger = new StandardLogger(System.out, System.err, Project.MSG_INFO, true);
+  }
 
   /**
    * Process command line arguments. When ant is started from Launcher,
@@ -316,9 +322,12 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
     final Map<String, Object> definedProps = new HashMap<>(args.definedProps);
     projectProps = Collections.singletonList(definedProps);
     buildFile = args.buildFile;
+    logger.setOutputLevel(args.msgOutputLevel);
+    logger.setUseColor(args.useColor);
 
     if (args.justPrintUsage) {
-      System.out.println(args.getUsage(false));
+      logger.setOutputLevel(Project.MSG_INFO);
+      logger.info(args.getUsage(false));
       return;
     } else if (args.justPrintDiagnostics) {
       Diagnostics.doReport(System.out, args.msgOutputLevel);
@@ -335,38 +344,20 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       printTranstypes();
       return;
     } else if (args instanceof final DeliverablesArguments deliverablesArgs) {
-      if (deliverablesArgs.projectFile == null) {
-        throw new CliException(locale.getString("deliverables.error.project_not_defined"), args.getUsage(true));
-      }
-      printDeliverables(deliverablesArgs.projectFile);
+      printDeliverables(deliverablesArgs);
       return;
     } else if (args instanceof final InstallArguments installArgs) {
-      buildFile = findBuildFile(System.getProperty(SYSTEM_PROPERTY_DITA_HOME), "integrator.xml");
-      targets.clear();
-      if (installArgs.installFile != null) {
-        targets.add("install");
-        final File f = new File(installArgs.installFile.replace('/', File.separatorChar)).getAbsoluteFile();
-        if (f.exists()) {
-          definedProps.put(ANT_PLUGIN_FILE, f.getAbsolutePath());
-        } else {
-          definedProps.put(ANT_PLUGIN_FILE, installArgs.installFile);
-        }
-      } else {
-        targets.add("integrate");
-      }
+      install(installArgs);
+      return;
     } else if (args instanceof final UninstallArguments installArgs) {
-      if (installArgs.uninstallId == null) {
-        throw new CliException(locale.getString("uninstall.error.identifier_not_defined"), args.getUsage(true));
-      }
-      buildFile = findBuildFile(System.getProperty(SYSTEM_PROPERTY_DITA_HOME), "integrator.xml");
-      targets.clear();
-      targets.add("uninstall");
-      definedProps.put(ANT_PLUGIN_ID, installArgs.uninstallId);
+      uninstall(installArgs);
+      return;
     } else if (args instanceof final ConversionArguments conversionArgs) {
       final File ditaDir = new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME));
       final File basePluginDir = new File(ditaDir, Configuration.pluginResourceDirs.get("org.dita.base").getPath());
       buildFile = findBuildFile(basePluginDir.getAbsolutePath(), "build.xml");
       definedProps.putAll(getLocalProperties(ditaDir));
+      definedProps.put(USE_COLOR, Boolean.toString(conversionArgs.useColor));
       if (conversionArgs.projectFile == null) {
         projectProps = Collections.singletonList(definedProps);
       } else {
@@ -420,10 +411,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
 
     // Normalize buildFile for re-import detection
     buildFile = FileUtils.getFileUtils().normalize(buildFile.getAbsolutePath());
-
-    if (args.msgOutputLevel >= Project.MSG_VERBOSE) {
-      System.out.println("Buildfile " + buildFile);
-    }
+    logger.debug("Buildfile " + buildFile);
 
     if (args.logFile != null) {
       PrintStream logTo;
@@ -442,6 +430,66 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
     readyToRun = true;
   }
 
+  private void uninstall(UninstallArguments installArgs) {
+    if (installArgs.uninstallId == null) {
+      throw new CliException(locale.getString("uninstall.error.identifier_not_defined"), args.getUsage(true));
+    }
+    final PluginUninstall pluginUninstall = new PluginUninstall();
+    pluginUninstall.setId(installArgs.uninstallId);
+    pluginUninstall.setDitaDir(new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME)));
+    pluginUninstall.setLogger(logger);
+
+    try {
+      pluginUninstall.execute();
+    } catch (CliException e) {
+      throw e;
+    } catch (Exception e) {
+      throw new CliException(e.getMessage(), e);
+    }
+  }
+
+  private void install(InstallArguments installArgs) {
+    final PluginInstall pluginInstall = new PluginInstall();
+    pluginInstall.setDitaDir(new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME)));
+    pluginInstall.setLogger(logger);
+    if (installArgs.definedProps.containsKey("force")) {
+      pluginInstall.setForce(Boolean.parseBoolean(installArgs.definedProps.get("force").toString()));
+    }
+    if (installArgs.installFile != null) {
+      final File f = new File(installArgs.installFile.replace('/', File.separatorChar)).getAbsoluteFile();
+      final String pluginFile = f.exists() ? f.getAbsolutePath() : installArgs.installFile;
+      try {
+        pluginInstall.setPluginFile(Paths.get(pluginFile));
+      } catch (InvalidPathException e) {
+        // Ignore
+      }
+      try {
+        final URI uri = new URI(pluginFile);
+        if (uri.isAbsolute()) {
+          pluginInstall.setPluginUri(uri);
+        }
+      } catch (URISyntaxException e) {
+        // Ignore
+      }
+      if (pluginFile.contains("@")) {
+        final String[] tokens = pluginFile.split("@");
+        pluginInstall.setPluginName(tokens[0]);
+        pluginInstall.setPluginVersion(new SemVerMatch(tokens[1]));
+      } else {
+        pluginInstall.setPluginName(pluginFile);
+        pluginInstall.setPluginVersion(null);
+      }
+    }
+
+    try {
+      pluginInstall.execute();
+    } catch (CliException e) {
+      throw e;
+    } catch (Exception e) {
+      throw new CliException(e.getMessage(), e);
+    }
+  }
+
   private Map<String, Object> getLocalProperties(File ditaDir) {
     final Map<String, Object> res = new HashMap<>();
     Stream
@@ -458,9 +506,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   }
 
   private Map<String, Object> readProperties(File localPropertiesFile) {
-    if (args.msgOutputLevel >= Project.MSG_VERBOSE) {
-      System.out.println("Reading " + localPropertiesFile);
-    }
+    logger.debug("Reading " + localPropertiesFile);
     try (InputStream in = Files.newInputStream(localPropertiesFile.toPath())) {
       final Properties localProperties = new Properties();
       localProperties.load(in);
@@ -469,7 +515,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
         .stream()
         .collect(Collectors.toMap(e -> e.getKey().toString(), Map.Entry::getValue));
     } catch (IOException e) {
-      System.err.println("Failed to read " + localPropertiesFile);
+      logger.error("Failed to read " + localPropertiesFile, e);
       return Collections.emptyMap();
     }
   }
@@ -588,7 +634,8 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       for (Publication.Param param : deliverable.publication().params()) {
         if (RESERVED_PARAMS.containsKey(param.name())) {
           printErrorMessage(
-            MessageUtils.getMessage("DOTJ085E", param.name(), RESERVED_PARAMS.get(param.name())).toString()
+            MessageUtils.getMessage("DOTJ085E", param.name(), RESERVED_PARAMS.get(param.name())).toString(),
+            null
           );
         }
       }
@@ -599,14 +646,14 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    * Handle the --plugins argument
    */
   private void printPlugins() {
+    logger.setOutputLevel(Project.MSG_INFO);
     final List<Map.Entry<String, String>> installedPlugins = Plugins.getInstalledPlugins();
     for (final Map.Entry<String, String> entry : installedPlugins) {
-      System.out.print(entry.getKey());
       if (entry.getValue() != null) {
-        System.out.print('@');
-        System.out.print(entry.getValue());
+        logger.info("{0}@{1}", entry.getKey(), entry.getValue());
+      } else {
+        logger.info(entry.getKey());
       }
-      System.out.println();
     }
   }
 
@@ -614,24 +661,26 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    * Handle the --transtypes argument
    */
   private void printTranstypes() {
+    logger.setOutputLevel(Project.MSG_INFO);
     for (final String transtype : transtypes) {
-      System.out.println(transtype);
+      logger.info(transtype);
     }
   }
 
-  /**
-   * Handle the --deliverables argument
-   */
-  private void printDeliverables(final File projectFile) {
-    final List<Map.Entry<String, String>> pairs = readProjectFile(projectFile)
+  private void printDeliverables(DeliverablesArguments deliverablesArgs) {
+    logger.setOutputLevel(Project.MSG_INFO);
+    if (deliverablesArgs.projectFile == null) {
+      throw new CliException(locale.getString("deliverables.error.project_not_defined"), args.getUsage(true));
+    }
+    final List<Map.Entry<String, String>> pairs = readProjectFile(deliverablesArgs.projectFile)
       .deliverables()
       .stream()
       .filter(deliverable -> deliverable.id() != null)
       .map(deliverable -> pair(deliverable.id(), deliverable.name()))
-      .collect(Collectors.toList());
+      .toList();
     final int length = pairs.stream().map(Map.Entry::getKey).map(String::length).reduce(Integer::max).orElse(0);
     for (Map.Entry<String, String> pair : pairs) {
-      System.out.println(
+      logger.info(
         Strings.padEnd(pair.getKey(), length, ' ') + (pair.getValue() != null ? ("  " + pair.getValue()) : "")
       );
     }
@@ -650,8 +699,8 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   private File getParentFile(final File file) {
     final File parent = file.getParentFile();
 
-    if (parent != null && args.msgOutputLevel >= Project.MSG_VERBOSE) {
-      System.out.println("Searching in " + parent.getAbsolutePath());
+    if (parent != null) {
+      logger.trace("Searching in " + parent.getAbsolutePath());
     }
 
     return parent;
@@ -671,9 +720,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    * not
    */
   private File findBuildFile(final String start, final String suffix) {
-    if (args.msgOutputLevel >= Project.MSG_INFO) {
-      System.out.println("Searching for " + suffix + " ...");
-    }
+    logger.debug("Searching for " + suffix);
 
     File parent = new File(new File(start).getAbsolutePath());
     File file = new File(parent, suffix);
@@ -794,10 +841,10 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       } catch (final Throwable t) {
         // yes, I know it is bad style to catch Throwable,
         // but if we don't, we lose valuable information
-        printErrorMessage("Caught an exception while logging the end of the build. Exception was:");
+        printErrorMessage("Caught an exception while logging the end of the build. Exception was:", null);
         t.printStackTrace();
         if (error != null) {
-          printErrorMessage("There has been an error prior to that:");
+          printErrorMessage("There has been an error prior to that:", null);
           error.printStackTrace();
         }
         throw new BuildException(t);
@@ -865,10 +912,13 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
         logger = ClasspathUtils.newInstance(args.loggerClassname, Main.class.getClassLoader(), BuildLogger.class);
       } catch (final BuildException e) {
         printErrorMessage(
-          "The specified logger class " + args.loggerClassname + " could not be used because " + e.getMessage()
+          "The specified logger class " + args.loggerClassname + " could not be used because " + e.getMessage(),
+          e
         );
         throw new RuntimeException();
       }
+    } else if (Configuration.configuration.getOrDefault("cli.log-format", "legacy").equals("legacy")) {
+      logger = new org.apache.tools.ant.DefaultLogger();
     } else {
       logger = new DefaultLogger();
       ((DefaultLogger) logger).useColor(args.useColor);
@@ -883,11 +933,12 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   }
 
   /**
-   * Prints the Ant version information to <code>System.out</code>.
+   * Prints the Ant version information logger.
    *
    * @throws BuildException if the version information is unavailable
    */
   private void printVersion() throws BuildException {
-    System.out.println(locale.getString("version").formatted(Configuration.configuration.get("otversion")));
+    logger.setOutputLevel(Project.MSG_INFO);
+    logger.info(locale.getString("version").formatted(Configuration.configuration.get("otversion")));
   }
 }
